# intent-verify

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assets/: preview-source.txt  preview-spec.md
examples/: github-action.yml  pre-commit-hook.sh  sample_INTENT.md
src/intent_verify/: __init__.py  cli.py  models.py  parser.py  report.py  scanner.py  tokenizer.py
src/intent_verify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_parser.py  test_scanner.py  test_tokenizer.py
tests/fixtures/repo_missing/src/: notes.py
tests/fixtures/repo_ok/: INTENT.md
tests/fixtures/repo_ok/src/app/: service.py
tests/fixtures/repo_partial/: INTENT.md
tests/fixtures/repo_partial/src/: service.py
